# vcgencmd-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  build.sh  rustfmt.toml
.cargo/: config.toml
.github/workflows/: main.yml
src/: commands.rs  error.rs  ffi.rs  lib.rs  local.rs  prelude.rs  response.rs  simulated.rs
src/ffi/: mock.rs  mod.rs
src/gencmd/: commands.rs  global.rs  mod.rs  response.rs  unique.rs
src/global/: mod.rs  singleton.rs
src/wrapper/: commands.rs  mod.rs  response.rs
