[package]
name = "videocore-gencmd"
version = "0.1.0"
edition = "2018"
authors = ["TheEdward162 <TheEdward162@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/TheEdward162/vcgencmd-rs"
keywords = ["raspberrypi", "raspberry", "videocore", "bindings", "vcgencmd"]
description = "Actual FFI bindings to Videocore gencmd funcionality"

[[bin]]
name = "vcgencmd"

[features]
default = []
run_bindgen = ["bindgen"]
mock_vc_ffi = []

[dependencies]
once_cell = "1.8"
thiserror = "1"
log = "0.4"

[dev-dependencies]
edwardium_logger = { version = "1.2.0", default-features = false, features = ["colored_stderr_output"] }

[build-dependencies]
bindgen = { version = "0.58", optional = true }
