[package]
name = "videocore-gencmd"
version = "0.1.0"
edition = "2018"
authors = ["TheEdward162 <TheEdward162@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/TheEdward162/vcgencmd-rs"
keywords = ["raspberrypi", "raspberry", "videocore", "bindings", "vcgencmd"]
description = "Actual FFI bindings to Videocore gencmd funcionality"

[[bin]]
name = "vcgencmd"
required-features = ["cli_app"]

[features]
default = []
run_bindgen = ["bindgen"]
mock_vc_ffi = []
cli_app = ["clap", "anyhow", "edwardium_logger"]

[dependencies]
once_cell = "1.8"
thiserror = "1"
log = "0.4"

clap = { version = "2", optional = true }
anyhow = { version = "1", optional = true }
edwardium_logger = { version = "1.2.0", default-features = false, features = ["colored_stderr_output"], optional = true }

[dev-dependencies]
edwardium_logger = { version = "1.2.0", default-features = false, features = ["colored_stderr_output"] }

[build-dependencies]
bindgen = { version = "0.58", optional = true }
