[package]
name = "videocore-gencmd"
version = "0.1.0"
edition = "2021"
authors = ["TheEdward162 <TheEdward162@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/TheEdward162/vcgencmd-rs"
keywords = ["bindings", "raspberry", "raspberrypi", "vcgencmd", "videocore"]
description = "FFI bindings to Videocore gencmd functionality"
exclude = ["raspberrypi-userland/*"]

[[bin]]
name = "vcgencmd"
required-features = ["cli_app"]

[features]
default = []

run_bindgen = ["bindgen"]
mock_vc_ffi = []
cli_app = ["anyhow", "clap", "edwardium_logger"]
global_singleton = []

serde_models = ["serde"]

[dependencies]
thiserror = "1"
log = "0.4"

clap = { version = "4", optional = true, features = ["derive"] }
anyhow = { version = "1", optional = true }
edwardium_logger = { version = "1.2", default-features = false, features = ["colored_stderr_output"], optional = true }

serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
edwardium_logger = { version = "1.2", default-features = false, features = ["colored_stderr_output"] }

[build-dependencies]
bindgen = { version = "0.66", optional = true }
